Correct various entries in 1_BhumiAdyaayah.yaml
Done slokas  of 1_BhumiAdyaayah file 
11 (32 to 42 शब्दाध्यायः) + 63 (भूमिकाण्डः देशाध्यायः) + 14 (शैलाध्यायः)

--- a/Output/Vaijayanti_Kosha/3_BhumiKhandah/1_BhumiAdyaayah.yaml
+++ b/Output/Vaijayanti_Kosha/3_BhumiKhandah/1_BhumiAdyaayah.yaml
@@ -1914,7 +1914,7 @@
       gender: n
     - prati: मध्वन
       gender: n
-वृतिमार्गस्य धेपदः प्राग्वंशः पदिकोऽपि च। संकमस्तित्तिरिस्तुल्यौ शृङ्गाटं तु चतुष्पथः ॥:
+वृतिमार्गस्त्वर्धपदः प्राग्वंशः पदिकोऽपि च। संक्रमस्तित्तिरिस्तुल्यौ शृङ्गाटं तु चतुष्पथः ॥:
   entries:
   - head: मार्ग
     verify: false
@@ -1952,7 +1952,7 @@
       gender: m
     - prati: शृङ्गाट
       gender: m
-जङ्घापदं चतुष्पादलिपादस्तु गृहान्तरम् । अकलोऽखिलो यावदष्टौ समस्तु चतुर्भुजः ॥:
+जङ्घापदं चतुष्पादस्त्रिपादस्तु गृहान्तरम् । अङ्गलोऽस्त्री याथा अष्टौ समस्तु चतुरङ्गुलः ॥:
   entries:
   - head: पाद
     verify: false
@@ -1989,7 +1989,7 @@
     syns:
     - prati: चतुर्भुज
       gender: m
-धलुमरेऽदश्च दिष्टिश्च स्यातामष्टाङ्गलौ भुवौ । दशाङ्गुलः क्रकचिको वितस्तिर्दशाङ्गुलाः ॥:
+धनुर्ग्रहश्च दिष्टिश्च स्यातामष्टाङ्गला विभौ । दशाङ्गुलः क्रकचिको वितस्तिर्द्वाशाङ्गुलाः ॥:
   entries:
   - head: भू
     verify: false
@@ -2018,7 +2018,7 @@
       gender: m
     - prati: वितस्ति
       gender: f
-किष्कुः स्याद्अवटो दष्टश्चतुर्विंशतिरङ्गुलाः । बद्धेन मुष्टिना हस्तः स्याद्रतिभोगको वसुः ॥:
+किष्कुः स्यादवटो हस्तश्चतुर्विंशतिरङ्गुलाः । बद्धेन मुष्टिना हस्तः स्याद्रत्निर्मुष्टिको वसुः ॥:
   entries:
   - head: किष्क
     verify: false
@@ -2048,7 +2048,7 @@
       gender: m
     - prati: रतिभोग
       gender: m
-अरणिर्निष्कनिष्ठोऽसौ स प्रजापतिदस्तकः। ङुःसश्चाप्यथवा ङुःसः सधनुमुष्टिरेव च ॥:
+अरत्निर्निष्कनिष्ठोऽसौ स प्रजापतिहस्तकः। कुत्सश्चाप्यथवाकुत्सः सधनुर्मुष्टिरेव च ॥:
   entries:
   - head: अरणि
     verify: false
@@ -2072,7 +2072,7 @@
       gender: m
     - prati: धनुमुष्टि
       gender: m
-अथ वध एक दशतः स्याद् द्वाचत्वारिंशदङ्गुलः । तस्मिन् विकिर्णकः क्रकचः किष्काकचिको ऽपि च ॥:
+अथ वर्धकिहस्तः स्याद् द्वाचत्वारिंशदङ्गुलः । तस्मिन् विकिष्कुः क्रकचः किष्कुः क्राकचिको ऽपि च ॥:
   entries:
   - head: वध
     verify: false
@@ -2094,7 +2094,7 @@
       gender: m
     - prati: किष्काकचिक
       gender: m
-हस्तद्वयं वै सप्तिष्ठु हस्तत्रयमलीमलम्। चतुर्हस्तो धनुर्देशो धरुधन्वन्तरं युगम् ॥:
+हस्तद्वयं तु सत्किष्कुर्हस्तत्रयमलीमलम् । चतुर्हस्तो धनुर्दण्डो धनुर्धन्वन्तरं युगम् ॥:
   entries:
   - head: हस्त
     verify: false
@@ -2126,7 +2126,7 @@
     syns:
     - prati: युग
       gender: n
-फेश्वरं नालिका चाथ पञ्चहस्तोऽर्धहस्तकः। अष्टहस्ता तु रज्जुः स्यान्नवहस्ता तु नालिका ॥:
+ऐश्वरं नालिका चाथ पञ्चहस्तोऽर्धहस्तकः। अष्टहस्ता तु रज्जुः स्यान्नवहस्ता तु नालिका ॥:
   entries:
   - head: हस्त
     verify: false
@@ -2155,7 +2155,7 @@
     syns:
     - prati: रज्जु
       gender: f
-दश दस्तः पितृनाथो दीर्घदण्डो निदेशकः। स प्रादेशनिकश्चाथ परिवेषो द्विरज्जुकः ॥:
+दशहस्तः पितृनल्वो दीर्घदण्डो निदेशकः। स प्रावेशनिकश्चाथ परिवेषो द्विरज्जुकः ॥:
   entries:
   - head: दस्त
     verify: false
@@ -2208,7 +2208,7 @@
     syns:
     - prati: द्विरज्जुक
       gender: m
-निबद्धं तु त्रिसृभिर्रज्जुभिर्बलिशं च तत् । नाविकः कृष्णभिः षष्ट्या नावः कृच्छ्रचलुश्शतम् ॥:
+निवर्तनं तु तिसृभी रज्जुभिर्बलिशं च तत् । नाल्विकः किष्कुभिः षष्ट्यानल्वः किष्कुचतुश्शतम् ॥:
   entries:
   - head: नाव
     verify: false
@@ -2233,7 +2233,7 @@
     syns:
     - prati: रज्जु
       gender: f
-दशधन्वन्तरं स्तोमो दशस्तोमस्तु वंशिकः । दशवंशिक आनाह दशानाहो नलान्तरः ॥:
+दशधन्वन्तरं स्तोमो दशस्तोमस्तु वंशिकः । दशवंशिक आनाहो दशानाहो नलान्तरः ॥:
   entries:
   - head: धन्वन्तर
     verify: false
@@ -2262,7 +2262,7 @@
       gender: m
     - prati: नलान्तर
       gender: m
-धन्वन्तरि सहस्रं तु क्रोशो गव्या तु तद्द्वयम् । खर्व्युति श्च गव्युतिं गोरुतं गोमतं च तत् ॥:
+धन्वन्तर सहस्रं तु क्रोशो गव्या तु तद् द्वयम् । स्त्री गव्यूतिश्च गव्यूतं गोरुतं गोमतं च तत् ॥:
   entries:
   - head: धन्वन्तरि
     verify: false
@@ -2293,7 +2293,7 @@
       gender: n
     - prati: गोमत
       gender: n
-गन्धयूतानि तु चत्वारि योजनानि कोसलादिषु । गव्यूतिद्वयमेव स्याद्योजनं मगधादिषु ॥:
+गव्यूतानि तु चत्वारि योजना कोसलादिषु । गव्यूतिद्वयमेव स्याद्योजनं मगधादिषु ॥: 
   entries:
   - head: योजन
     verify: false
@@ -2327,7 +2327,7 @@
     - prati: गव्यूति
       gender: f
     qual: distance measurement unit
-इति श्रीभगवता यादवप्रकाशेन विरचितायां जयन्त्यां भूमिकाण्डे देशाध्यायः ॥:
+इति श्रीभगवता यादवप्रकाशेन विरचितायां वैजयन्त्यां भूमिकाण्डे देशाध्यायः ॥:
   entries:
   - head: भगवत्
     verify: false
@@ -2350,7 +2350,7 @@
     syns:
     - prati: अध्याय
       gender: m
-शैलोऽगः पर्वतः धृमान् सानुमान् दुर्ग मेरुरिः । अहारगोत्र गिरीन्द्रारा भूधरोऽचलः ॥:
+शैलोऽगः पर्वतः क्ष्माभृत् सानुमान् दुर्गमोगिरिः । अहार्यगोत्र कुट्टीरकुट्टार भूधरोऽचलः ॥:
   entries:
   - head: पर्वत
     verify: false
@@ -2377,7 +2377,7 @@
       gender: m
     - prati: अचल
       gender: m
-बन्धाकिः फलिकः कुधरः प्रपाद्यद्रिः शिलाचयः । सुवेलः स्यात् चित्रवटखिकरूढ खिकड च सः ॥:
+बन्धाकिः फलिकः कुध्रः प्रपाद्यद्रिः शिलोच्चयः । सुवेलः स्याच्चित्रकूटस्त्रिकूटस्त्रिककुच्च सः ॥:
   entries:
   - head: पर्वत
     verify: false
@@ -2405,7 +2405,7 @@
       gender: m
     - prati: खिकर
       gender: m
-लोकालोकश्च कक्षवालेः लोकान्ताद्रिः पराचलः। मलये त्रिकूटपाटं; बिन्ध्यश्च जलबालकः ॥:
+लोकालोकश्चक्रवालो लोकान्ताद्रिः पराचलः। मलये त्रिकलापाढौ विन्ध्यस्तु जलवालकः ॥:
   entries:
   - head: लोक
     verify: false
@@ -2437,7 +2437,7 @@
       gender: m
     - prati: बिन्ध्य
       gender: m
-हिरण्यनाभो मेदाकः सदारः पारियात्रकः। माध्यंगः प्रवणो दिव्यंशस्तु दिनाचलः॥:
+हिरण्यनाभो मैनाकः सदारूः पारियात्रकः। माल्यवांस्तु प्रस्रवणो हिमवांस्तु हिमाचलः॥:
   entries:
   - head: हिरण्यनाभ
     verify: false
@@ -2460,7 +2460,7 @@
       gender: m
     - prati: दिनाचल
       gender: m
-रजताद्रिस्तु कैलासः दरादृष्टिहितश्च सः। देङ्कटो वृषभः सिंहः कैसरः केशवप्रियः॥:
+रजताद्रिस्तु कैलासो हराद्रिर्महितश्च सः। वेङ्कटो वृषभः सिंहः कैसरः केशवप्रियः॥:
   entries:
   - head: पर्वत
     verify: false
@@ -2498,7 +2498,7 @@
       gender: m
     - prati: केशव
       gender: m
-उद्यस्तोदयाद्रिः स्यादस्तस्त्वस्तमयाचलः। गुहा कन्दरो ऽक्ली प्रपातस्तु तटः श्रियुक्॥:
+उदयस्तूदयाद्रिः स्यादस्तस्त्वस्तमयाचलः। दरी गुहा कन्दरोऽक्ली प्रपातस्तु तटो भृगुः ॥:
   entries:
   - head: अचल
     verify: false
@@ -2527,7 +2527,7 @@
     syns:
     - prati: तट
       gender: m
-उत्सः प्रस्रवणं तोयप्रवाहे करनिर्झरौ । स्नुवग्रौ अखिलाः पादाः पर्यन्तपर्वताः ॥:
+उत्सः प्रस्रवणं तोयप्रवाहे  झरनिर्झरौ । स्नुर्वप्रोऽस्त्री सानुरस्त्री पादाः पर्यन्तपर्वताः ॥:
   entries:
   - head: उत्स
     verify: false
@@ -2561,7 +2561,7 @@
       gender: m
     - prati: पर्वत
       gender: m
-वृषः अश्मा शिखरं गिरिः नितम्बः कटको अखिलः। पाषाणः उपलः अश्मा च प्रस्तरश्च शिला दृढः ॥:
+कूटोऽस्त्री शिखरं श्रृङ्गं नितम्बः कटकोऽस्त्रियाम् । पाषाण उपलोश्मा प्रस्तरश्च शिला दृपत् ॥:
   entries:
   - head: गिरि
     verify: false
@@ -2597,7 +2597,7 @@
       gender: m
     - prati: अखिल
       gender: m
-गण्डशैलाः तु पाषाणाः स्थूलाः प्रगलिता गिरेः। उपत्यका स्वधा भूमेर्गिरेरूर्ध्वं मदीयका ॥:
+गण्डशैलास्तु पाषाणाः स्थूलाः प्रगलिता गिरेः। उपत्यका स्वधोभूमिर्गिरेरूर्ध्वमधित्यका ॥:
   entries:
   - head: पाषाण
     verify: false
@@ -2632,7 +2632,7 @@
       gender: f
     - prati: स्वधा
       gender: f
-ऊडङ्खो अखिलो निकुञ्जो अखिलो ऊडजो वरक्वतरान्तरे । आकरः खनि गुञ्जा रुमा तु लवणाकरः ॥:
+कुडङ्गोऽस्त्री  निकुञ्जोऽस्त्री कुञजो वृक्षवृतान्तरे । आकरः स्त्री खनिर्गञ्जा रुमा तु लवणाकरः ॥:
   entries:
   - head: अखिल
     verify: false
@@ -2661,7 +2661,7 @@
     syns:
     - prati: गुञ्जा
       gender: f
-गैरिकं पीतधातुः स्यात् नटी तु मनःशिला । रोचनी रञ्जनी हेया रसनेत्री महासना ॥:
+गैरिकं पीतधातुः स्यात्  कुनटी तु मनःशिला । रोचनी रञ्जनी ह्यद्या रसनेत्री महासना ॥:
   entries:
   - head: गैरिक
     verify: false
@@ -2694,7 +2694,7 @@
       gender: f
     - prati: महासना
       gender: f
-करवीरा कला विद्यान्नागमाता विगन्धिका । शिला मनोऽभिधा काला नागजिह्वा च ताः समाः ॥:
+करवीरा कला विद्युन्नागमाता विगन्धिका । शिला मनोऽभिधा काला नागजिह्वा च ताः समाः ॥:
   entries:
   - head: विद्या
     verify: false
@@ -2734,7 +2734,7 @@
       gender: f
     - prati: मनस्
       gender: n
-शर्धातौ पाकपुंगवा कठिनी कर्कटी खटी। हरितालं तु खदिरं पिङ्गलं नटभूषणम्॥:
+शुकॢधातौ पाक्शुकॢा कठिनी कक्खटी खटी। हरितालं तु खर्जूरं पिञ्जरं नटभूषणम्॥:
   entries:
   - head: पाक
     verify: false
@@ -2778,7 +2778,7 @@
     syns:
     - prati: नटभूषण
       gender: n
-तालमालं वंशपत्रं पतनं रोमहर्षणम् । सौगन्धिकरसं पामारिः पीतो गन्धाश्मगन्धकौ ॥:
+तालमालं वंशपत्रं पीतनं रोमह्यद्वरम् । सौगन्धिकस्तु पामारिः पीतो गन्धाश्मगन्धकौ ॥:
   entries:
   - head: ताल
     verify: false
